<resources>
    <string name="app_name">Wetter</string>


    <string name="app_name_sigle">W</string>

    <!--icones-->
    <string name="icon_foto_cadastro">\uf1db</string>
    <string name="icon_camera">\uf030</string>
    <string name="icon_galeria">\uf03e</string>
    <string name="icon_password">\uf13e</string>
    <string name="icon_facebook">\uf230</string>

    <!--texto tela de cadastro-->
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="nome">Informe o nome</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="conf_senha">Confirme a senha</string>

    <!--texto de dialogo-->
    <string name="title_dialogo">Permission</string>
    <string name="content_dialogo">Permission para tirar foto</string>
    <string name="posti_text_dialogo">Sim</string>
    <string name="negative_text_dialogo">Não</string>

    <!--tela de login-->
    <string name="title_facebook_btn">Logar com Facebook</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="entrar_btn">Entrar</string>
    <string name="nao_tenho_cadastro">Não tenho cadastro</string>
    <string name="logo_txt">Wette</string>

    <!--logar com facebook-->
    <string name="facebook_app_id">518199871914130</string>
    <string name="fb_login_protocol_scheme">fb518199871914130</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!--title menu home-->
    <string name="podium">Podium</string>
    <string name="identy_card">indenty</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    
    <!--partidas fragment-->
    <string name="apostar_btn">Apostar</string>

    <!--teste section-->
    <string name="linear_sectioned_recyclerview_vertical">Linear Sectioned RecyclerView (Vertical)</string>
    <string name="linear_sectioned_recyclerview_horizontal">Linear Sectioned RecyclerView (Horizontal)</string>
    <string name="grid_sectioned_recyclerview">Grid Sectioned RecyclerView</string>

    <!--bolões-->
<string name="btn_criar_boloes">Criar Boloão</string>


    <!--dialogo confirmação de e-mail-->
    <string name="msg_dialogo_email">Cadastro realizado com sucesso! \n
        Foi enviado um link de confirmação \n para o email cadastrado!</string>
</resources>
