<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_degrader"
        tools:context=".views.LoginActivity">

        <TextView
            android:id="@+id/logo_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/logo_txt"
            android:textColor="@color/amarelo"
            android:textSize="70sp"
            app:fontFamily="@font/pacifico"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/logar_facebook_lg_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/background_btn_facebook"
            android:onClick="logar_facebook"
            android:textColor="@color/branco"
            android:text="@string/title_facebook_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_txt" />

        <EditText
            android:id="@+id/email_lg_edt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/plaint_background"
            android:drawableLeft="@drawable/ic_man_user"
            android:drawableStart="@drawable/ic_man_user"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:paddingLeft="5dp"
            android:textColor="@color/branco"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logar_facebook_lg_btn" />

        <EditText
            android:id="@+id/senha_lg_edt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/plaint_background"
            android:drawableLeft="@drawable/ic_lock"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:padding="10dp"
            android:paddingLeft="5dp"
            android:textColor="@color/branco"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_lg_edt" />

        <TextView
            android:id="@+id/esqueci_senha_lg_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/esqueci_minha_senha"
            android:textColor="@color/branco"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/senha_lg_edt" />

        <Button
            android:id="@+id/entrar_login_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_entrar_btn"
            android:text="@string/entrar_btn"
            android:textColor="@color/branco"
            android:onClick="entrar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/esqueci_senha_lg_txt" />

        <TextView
            android:id="@+id/no_cadastro_lg_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:onClick="view_cadastro"
            android:text="@string/nao_tenho_cadastro"
            android:textColor="@color/branco"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/entrar_login_btn" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>